<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- default german strings -->


    <!-- general -->
    <string name="app_name">Kostinator</string>
    <string name="action_settings">Einstellungen</string>
    <string name="hello_world">Hallo Welt!</string>
    <string name="currency">&#8364;</string>
    <string name="percent">&#37;</string>
    <string name="exchange_rate">1.3807</string>

    <!-- Main -->
    <string name="title_activity_main">Kostengruppen</string>
    <string name="positive">Ja</string>
    <string name="negative">Nein</string>
    <string name="title_costgroup_delete_dialog">Kostengruppe und alle enthaltenen Kostenelemente löschen?</string>

    <!-- BusinessAssesment -->
    <string name="title_activity_business_assesment">Auswertung</string>
    <string name="costgroup">Kostengruppe: </string>
    <string name="btn_pie_chart">Diagramm</string>
    <string name="categories">Kostenverteilung </string>
    <string name="barchart_title">Vergleich Kostenelemente mit Toleranz</string>
    <string name="dayly">/Tag</string>
    <string name="weekly">/Woche</string>
    <string name="monthly">/Monat</string>
    <string name="quart">/Quartal</string>
    <string name="yearly">/Jahr</string>
    <string name="cost_allocation">Kostenverteilung </string>
    <string name="phase">(Zeitraum: </string>
    <string name="best_case">bester Fall</string>
    <string name="avg_case">durchschnittlicher Fall</string>
    <string name="worst_case">schlechtester Fall</string>
    <string name="x_axis">Kostenelement</string>
    <string name="y_axis">Betrag</string>

    <!-- Costgroup -->
    <string name="title_activity_costgroup">Kostengruppe</string>
    <string name="assessCostgroup">Kostengruppe auswerten</string>
    <string name="tolerancetxt">Toleranz: </string>
    <string name="title_costelement_delete_dialog">Kostenelement löschen?</string>
    <string name="action_title_edit_costgroup">Kostengruppe bearbeiten</string>

    <!-- CostgroupBusinessAssesment -->
    <string name="title_activity_costgroup_business_assesment">Kostengruppenauswertung</string>
    <string name="button_chart_avg">Diagramm Average Case</string>
    <string name="button_chart_best">Diagramm Best Case</string>
	<string name="button_chart_worst">Diagramm Worst Case</string>
	<string name="button_chart_overall">Diagramm Gesamt</string>
    
    <!-- NewCostelement -->
    <string name="title_activity_new_costelement">Neues Kostenelement erstellen</string>
    <string name="title_activity_select_category">Wählen Sie bitte eine Kostenkategorie:</string>
    <string name="name_hint">Name</string>
    <string name="desc_hint">Beschreibung</string>
    <string name="value_hint">Wert</string>
    <string name="name_RadioButton_OnetimeFixed">fix-einmalige Kosten</string>
    <string name="name_RadioButton_PeriodicalFixed">fix-periodische Kosten</string>
    <string name="title_datePicker_Start">Beginn Zahlung Datum ausw&#228;hlen:</string>
    <string name="title_datePicker_End">Ende Zahlung Datum auswählen:</string>
    <string name="title_save_costelement">Speichern</string>

    <string-array name="periods">
        <item>--bitte auswählen--</item>
        <item>t&#228;glich</item>
        <item>w&#246;chentlich</item>
        <item>monatlich</item>
        <item>Quartal</item>
        <item>j&#228;hrlich</item>
    </string-array>
    <string-array name="tolerances">
        <item>--optional--</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>30%</item>
        <item>35%</item>
        <item>40%</item>
        <item>45%</item>
        <item>50%</item>
        <item>55%</item>
        <item>60%</item>
        <item>65%</item>
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
        <item>95%</item>
        <item>100%</item>
    </string-array>

    <string name="title_period_spinner">Periode auswählen:</string>
    <string name="title_tolerance_spinner">Toleranz auswählen:</string>

    <!-- NewCostgroup -->
    <string name="title_activity_new_costgroup">Neue Kostengruppe erstellen</string>

    <!-- AddCostgroupDialogFragment -->
    <string name="title_dialog_add_costgroup">Neue Kostengruppe erstellen</string>
    <string name="hint_dialog_name_costgroup">Kostgruppen Name</string>
    <string name="ButtonSave">Speichern</string>
    <string name="title_activity_new_costelement_ontime">NewCostelementOntime</string>
    <string name="title_activity_new_costelement_periodical">NewCostelementPeriodical</string>

    <!-- Costgroup Business Assesment DialogFragment -->
    <string name="title_dialog_costgroup_business_assesment">Kostgruppe auswerten!</string>
    <string name="title_dialog_costgroup_business_assesment_periode_spinner">Periode auswählen:</string>
    <string name="title_dialog_costgroup_business_assesment_periode_tolerance">Zu erwartendes Kosten-Szenario auswählen:</string>
    <string name="title_dialog_costgroup_business_assesment_amount_period">Anzahl an Perioden auswählen:</string>
    <string name="ButtonEvaluate">Auswerten</string>
    <string name="dailyAssesmentSpinner">t&#228;glich</string>
    <string name="weeklyAssesmentSpinner">w&#246;chentlich</string>
    <string name="monthlyAssesmentSpinner">monatlich</string>
    <string name="quartalAssesmentSpinner">Quartal</string>
    <string name="yearlyAssesmentSpinner">j&#228;hrlich</string>
    <string name="days">Tage</string>
    <string name="weeks">Wochen</string>
    <string name="months">Monate</string>
    <string name="quartals">Quartale</string>
    <string name="years">Jahre</string>
    <string name="day">Tag</string>
    <string name="week">Woche</string>
    <string name="month">Monat</string>
    <string name="quartal">Quartal</string>
    <string name="year">Jahr</string>
    <string name="sum">Endbetrag: \n</string>

    <!-- error messages -->
    <string name="err_no_items">Sie k&#246;nnen nur eine Auswertung machen, wenn Ihre Kostengruppe auch Kostenelemente enth&#228;lt</string>
    <string name="err_no_tolerance_items">Im Balkendiagramm werden nur Kostenelmente angeziegt, die eine Toleranz haben. Ihre Kostengruppe besitzt keine solchen Kostenelemente</string>
    <string name="err_no_costgroup_name">Bitte geben Sie einen Namen f&#252;r die neue Kostengruppe ein</string>
    <string name="err_missing_costelement_data">Bitte f&#252;llen Sie die Plichtfelder Name, Betrag und Periodizit&#228;t aus</string>
    <string name="title_activity_edit_costelement">EditCostelement</string>
    

</resources>
