<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewCostelement" >

    <!-- default layout activity new costelement -->

    <TextView
        android:id="@+id/textViewTitleCostelement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_new_costelement"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/lineMain"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_alignLeft="@+id/textViewTitleCostelement"
        android:layout_below="@+id/textViewTitleCostelement"
        android:background="@color/Black" />

    <EditText
        android:id="@+id/editTextCostelementName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lineMain"
        android:layout_alignRight="@+id/lineMain"
        android:layout_below="@+id/lineMain"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/name_hint" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCostelementName"
        android:layout_below="@+id/editTextCostelementName"
        android:layout_marginTop="36dp" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/radioPeriodicalFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/radioGroup1"
        android:checked="true"
        android:text="@string/name_RadioButton_PeriodicalFixed" />

    <RadioButton
        android:id="@+id/radioOnetimeFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioPeriodicalFixed"
        android:layout_below="@+id/radioPeriodicalFixed"
        android:layout_marginTop="16dp"
        android:text="@string/name_RadioButton_OnetimeFixed" />

    <EditText
        android:id="@+id/editTextCostelementValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioOnetimeFixed"
        android:layout_alignRight="@+id/radioOnetimeFixed"
        android:layout_below="@+id/radioOnetimeFixed"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/value_hint" />

</RelativeLayout>