<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >



    <TextView
        android:id="@+id/textViewTitleCostelementPeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_new_costelementPeriodical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/lineMainPeriodical"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_alignLeft="@+id/textViewTitleCostelementPeriodical"
        android:layout_below="@+id/textViewTitleCostelementPeriodical"
        android:background="@color/Black" />

    <EditText
        android:id="@+id/editTextCostelementNamePeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lineMainPeriodical"
        android:layout_alignRight="@+id/lineMainPeriodical"
        android:layout_below="@+id/lineMainPeriodical"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name_hint" >
    </EditText>

 

    <EditText
        android:id="@+id/editTextCostelementValuePeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextCostelementNamePeriodical"
        android:layout_alignRight="@+id/editTextCostelementNamePeriodical"
        android:layout_below="@+id/editTextCostelementNamePeriodical"
        android:layout_marginTop="23dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/value_hint" />

    
    <TextView
        android:id="@+id/textViewTitlePickerStartPeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/editTextCostelementValuePeriodical"
		android:layout_marginTop="23dp"
        android:text="@string/title_datePicker_Start"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
     <DatePicker
        android:id="@+id/datePickerStartPeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitlePickerStartPeriodical" />
        
     <TextView
        android:id="@+id/textViewTitlePickerEndPeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/datePickerStartPeriodical"
		android:layout_marginTop="23dp"
        android:text="@string/title_datePicker_End"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <DatePicker
        android:id="@+id/datePickerEndPeriodical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitlePickerEndPeriodical" />

      <TextView
        android:id="@+id/textViewTitleSpinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/datePickerEndPeriodical"
		android:layout_marginTop="23dp"
        android:text="@string/title_period_spinner"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     
     
     <Spinner
         android:id="@+id/spinnerCostelementPeriodical"
         android:entries="@array/periods"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewTitleSpinnerTitle"
          />
     
     <Button
         android:id="@+id/buttonSaveCostelement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:layout_below="@+id/spinnerCostelementPeriodical"
         android:layout_centerHorizontal="true"
         android:text="@string/title_save_costelement" />

     
    
</RelativeLayout>
</ScrollView>
